cleaning from deec 5

--- a/wp-content/themes/rysersonmag-child/css/child-theme.css
+++ b/wp-content/themes/rysersonmag-child/css/child-theme.css
@@ -15243,7 +15243,7 @@ body strong {
   right: 0;
   top: 0;
   z-index: 999;
-  background: #004C9B;
+  background: #4c4c4c;
   width: 100vw;
   height: 100vh;
 }
@@ -15256,7 +15256,7 @@ input.search-submit {
   background-image: url("../img/search-submit.png");
   background-repeat: no-repeat;
   background-size: 66%;
-  background-color: #004c9b;
+  background-color: #4c4c4c;
   width: 50px;
   height: 60px;
   position: relative;
@@ -15338,10 +15338,10 @@ input[type=search]::-webkit-search-results-decoration {
 input[type=search]:-webkit-autofill,
 input[type=search]:-webkit-autofill:hover,
 input[type=search]:-webkit-autofill:focus {
-  border: 1px solid #004C9B;
+  border: 1px solid #4c4c4c;
   -webkit-text-fill-color: #fff;
   border-bottom: 2px solid #fff;
-  -webkit-box-shadow: 0 0 0px 80px #004C9B inset;
+  -webkit-box-shadow: 0 0 0px 80px #4c4c4c inset;
   -webkit-transition: none;
   transition: none;
   font-family: "Suisse Reg", sans-serif;
@@ -15437,7 +15437,7 @@ input[type=search]:-webkit-autofill::first-line {
   right: 0;
   top: 0;
   z-index: 999;
-  background: #e2e2e2;
+  background: #fff;
   width: 100vw;
   height: 100vh;
 }
@@ -15456,6 +15456,7 @@ input[type=search]:-webkit-autofill::first-line {
   background-position: top right;
   border: none;
   border-bottom: 2px solid #000;
+  border-radius: 0;
 }
 .mobile-header-drawer input[type=search] {
   background: none !important;
@@ -15535,7 +15536,8 @@ input[type=search]:-webkit-autofill::first-line {
 .mobile-drawer-cat-list {
   padding: 0;
   list-style-type: none;
-  margin-top: 30px;
+  margin-top: 25px;
+  margin-bottom: 10px;
   border-bottom: 2px dotted #000;
 }
 .mobile-drawer-cat-list li a {
@@ -15548,7 +15550,7 @@ input[type=search]:-webkit-autofill::first-line {
   background-repeat: no-repeat;
   background-position: 0 20px;
   background-size: 100% 10px;
-  padding-bottom: 40px;
+  padding-bottom: 32px;
   background-image: linear-gradient(180deg, #c4c4c4, #c4c4c4);
 }
 .mobile-drawer-cat-list li a.green {
@@ -15582,6 +15584,7 @@ input[type=search]:-webkit-autofill::first-line {
 ul.mobile-drawer-links {
   padding: 0;
   list-style-type: none;
+  margin-bottom: 14px;
 }
 ul.mobile-drawer-links li {
   margin-bottom: 6px;
@@ -15738,6 +15741,15 @@ figcaption {
   color: #fff;
 }
 
+@media (max-width: 767.98px) {
+  .author-date-sep {
+    display: none;
+  }
+
+  .post-date {
+    display: block;
+  }
+}
 .addtoany_list.a2a_kit_size_40 a:not(.addtoany_special_service) > span {
   padding: 6px;
   border-radius: 100% !important;
@@ -15827,8 +15839,15 @@ figcaption {
   border-bottom: none;
 }
 @media (max-width: 767.98px) {
+  .social-share-icons {
+    margin-bottom: 15px;
+  }
   .social-share-icons #left-sidebar {
     padding-left: 0;
+  }
+
+  .related-articles-sec {
+    margin-top: 55px;
   }
 }
 .post-body cite {
@@ -15869,8 +15888,8 @@ cite.aside .desc {
 }
 @media (max-width: 767.98px) {
   .post-body h1, .post-body h2, .post-body h3, .post-body h4, .post-body h5, .post-body h6 {
-    font-size: 20px;
-    line-height: 20px;
+    font-size: 24px;
+    line-height: 30px;
   }
 }
 
@@ -15881,6 +15900,12 @@ blockquote {
   margin: 0;
 }
 
+@media (max-width: 767.98px) {
+  blockquote {
+    font-size: 30px;
+    line-height: 36px;
+  }
+}
 .video {
   max-width: 100%;
   /*padding:2.857em 0;*/
@@ -15945,6 +15970,12 @@ blockquote {
   margin: 0;
 }
 
+@media (max-width: 767.98px) {
+  .dyk-content {
+    max-width: 90%;
+    margin: 0 auto 55px auto;
+  }
+}
 .watn-wrap {
   height: 100%;
   display: flex;
@@ -15995,6 +16026,37 @@ blockquote {
   display: block;
 }
 
+@media (max-width: 767.98px) {
+  .watn-wrap {
+    margin-bottom: 75px;
+    float: left;
+    width: 100%;
+    display: block;
+  }
+  .watn-wrap p {
+    font-size: 20px;
+    line-height: 26px;
+  }
+
+  .watn-wrap h3 {
+    font-size: 24px;
+    line-height: 28px;
+    margin-bottom: 16px;
+  }
+  .watn-wrap h3 br {
+    display: none;
+  }
+
+  .watn-sub {
+    font-size: 20px;
+    line-height: 26px;
+  }
+
+  .name-class {
+    font-size: 20px;
+    line-height: 26px;
+  }
+}
 .btnums-wrap {
   height: 100%;
   display: flex;
@@ -16029,6 +16091,29 @@ blockquote {
   margin: 0;
 }
 
+@media (max-width: 767.98px) {
+  .btnums-wrap {
+    display: block;
+    margin-bottom: 55px;
+  }
+  .btnums-wrap h3 {
+    font-size: 24px;
+    text-align: left;
+  }
+  .btnums-wrap .btnums-sub {
+    font-size: 20px;
+    line-height: 26px;
+    text-align: left;
+  }
+  .btnums-wrap .btnum-num {
+    font-size: 36px;
+    line-height: 36px;
+  }
+  .btnums-wrap .btnum-content p {
+    font-size: 20px;
+    line-height: 26px;
+  }
+}
 .drop-cap {
   color: #000;
   float: left;
@@ -16157,8 +16242,8 @@ div#comments h2.comments-title {
 }
 @media (max-width: 767.98px) {
   div#comments h2.comments-title {
-    font-size: 20px;
-    line-height: 20px;
+    font-size: 24px;
+    line-height: 30px;
   }
 }
 div#comments ol.comment-list {
@@ -16169,6 +16254,10 @@ div#comments ol.comment-list {
 }
 div#comments ol.comment-list article {
   margin-bottom: 16px;
+}
+div#comments ol.children {
+  list-style-type: none;
+  padding: 0 0 0 20px;
 }
 div#comments .comment-body {
   font-size: 14px;
@@ -16272,17 +16361,18 @@ p.form-submit {
 }
 .archive-page h1.page-title, .home h1.page-title {
   font-size: 112px;
-  line-height: 90px;
+  line-height: 100px;
   letter-spacing: -4px;
   font-family: "Suisse Bold", sans-serif;
   text-transform: lowercase;
   display: inline-block;
   background-image: none;
   background-repeat: no-repeat;
-  background-position: 0 70px;
+  background-position: 0 95px;
   background-size: 100% 30px;
-  padding-bottom: 30px;
+  padding-bottom: 35px;
   background-image: linear-gradient(180deg, #c4c4c4, #c4c4c4);
+  display: inline;
 }
 @media (max-width: 991.98px) {
   .archive-page h1.page-title, .home h1.page-title {
@@ -16293,7 +16383,7 @@ p.form-submit {
 @media (max-width: 767.98px) {
   .archive-page h1.page-title, .home h1.page-title {
     font-size: 60px;
-    line-height: 70px;
+    line-height: 60px;
     background-position: 0 53px;
     background-size: 100% 16px;
     padding-bottom: 30px;
@@ -16492,8 +16582,8 @@ span.taxonomy-thumb:hover img, span.taxonomy-thumb:focus img {
 }
 @media (max-width: 767.98px) {
   .home-editors-picks h2 {
-    font-size: 20px;
-    line-height: 20px;
+    font-size: 24px;
+    line-height: 30px;
   }
 }
 @media (max-width: 767.98px) {
@@ -16585,7 +16675,7 @@ span.taxonomy-thumb:hover img, span.taxonomy-thumb:focus img {
 
 .featured-cat-heading {
   font-size: 112px;
-  line-height: 90px;
+  line-height: 100px;
   letter-spacing: -4px;
   font-family: "Suisse Bold", sans-serif;
   text-transform: lowercase;
@@ -16608,7 +16698,7 @@ span.taxonomy-thumb:hover img, span.taxonomy-thumb:focus img {
 @media (max-width: 767.98px) {
   .featured-cat-heading {
     font-size: 60px;
-    line-height: 70px;
+    line-height: 60px;
     background-position: 0 53px;
     background-size: 100% 16px;
     padding-bottom: 30px;
@@ -16817,6 +16907,36 @@ span.taxonomy-thumb:hover img, span.taxonomy-thumb:focus img {
   margin-right: 40px;
 }
 
+.mag-pagination-next {
+  font-size: 28px;
+  line-height: 36px;
+  font-family: "Suisse Bold", sans-serif;
+  text-transform: lowercase;
+}
+.mag-pagination-next:hover {
+  text-decoration: none;
+  color: #4c4c4c;
+}
+
+.flex-row-end {
+  display: flex;
+  justify-content: end;
+}
+
+.sec-pad-xl {
+  margin: 100px 0 125px 0;
+}
+
+@media (max-width: 767.98px) {
+  .current-issue-page .post-tags {
+    margin-bottom: 55px;
+  }
+
+  .current-issue-page .current-issue-articles {
+    border-left: none;
+    padding-left: 15px;
+  }
+}
 .search-results-page header p {
   font-size: 16px;
   line-height: 32px;
