--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_comments.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_comments.scss
@@ -14,6 +14,10 @@ div#comments {
             margin-bottom: 16px;
         }
     }
+    ol.children {
+        list-style-type: none;
+        padding: 0 0 0 20px;
+    }
     .comment-body {
         font-size: 14px;
         line-height: 20px;
