--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_post-headings.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_post-headings.scss
@@ -98,3 +98,13 @@ figcaption {
         color: $white;
     }
 }
+
+
+@include media-breakpoint-down(sm) {
+    .author-date-sep {
+        display: none;
+    }
+    .post-date {
+        display: block;
+    }
+}
