--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_current-issue-page.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_current-issue-page.scss
@@ -90,3 +90,36 @@
         }
     }
 }
+
+.mag-pagination-next {
+    font-size: 28px;
+    line-height: 36px;
+    font-family: 'Suisse Bold', sans-serif;
+    text-transform: lowercase;
+    &:hover {
+        text-decoration: none;
+        color: $medGrey;
+    }
+}
+
+.flex-row-end {
+    display: flex;
+    justify-content: end;
+}
+
+.sec-pad-xl {
+    margin: 100px 0 125px 0;
+}
+
+
+@include media-breakpoint-down(sm) {
+    .current-issue-page {
+        .post-tags {
+            margin-bottom: 55px;
+        }
+    }
+    .current-issue-page .current-issue-articles {
+        border-left: none;
+        padding-left: 15px;
+    }
+}
