--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_quote-block.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_quote-block.scss
@@ -4,3 +4,10 @@ blockquote {
     line-height: 44px;
     margin: 0;
 }
+
+@include media-breakpoint-down(sm) {
+    blockquote {
+        font-size: 30px;
+        line-height: 36px;
+    }
+}
