--- a/wp-content/themes/rysersonmag-child/css/child-theme.css
+++ b/wp-content/themes/rysersonmag-child/css/child-theme.css
@@ -15972,7 +15972,7 @@ blockquote {
 
 @media (max-width: 767.98px) {
   .dyk-content {
-    max-width: 90%;
+    max-width: 160px;
     margin: 0 auto 55px auto;
   }
 }
