--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_dyk.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_dyk.scss
@@ -33,7 +33,7 @@
 
 @include media-breakpoint-down(sm) {
     .dyk-content {
-        max-width: 90%;
+        max-width: 160px;
         margin: 0 auto 55px auto;
     }
 }
