--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_home.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_home.scss
@@ -1,3 +1,45 @@
+a.home-logo-rel-wrapper {
+    position: relative;
+    display: block;
+    height: 420px;
+    p {
+        font-size: 14px;
+        line-height: 18px;
+        font-family: 'Suisse Reg', sans-serif;
+        text-align: center;
+        position: absolute;
+        right: 28%;
+
+    }
+    
+    span {
+      display: inline-block;
+      position: relative;
+        &::after {
+          content: '';
+          position: absolute;
+          width: 100%;
+          transform: scaleX(0);
+          height: 1.25px;
+          bottom: 0;
+          left: 0;
+          background-color: $black;
+          transform-origin: bottom right;
+          transition: transform 0.25s ease-out;
+        }
+
+    }
+    
+    &:hover {
+        span {
+            &::after {
+              transform: scaleX(1);
+              transform-origin: bottom left;
+            }
+        }
+    }
+}
+
 .sticky-home-intro {
     position: relative;
     top: -80px;
@@ -13,8 +55,8 @@
         line-height: 20px;
         font-family: 'Suisse Reg', sans-serif;
         #viewAllTopics {
-            text-decoration: none;
-            border-bottom: 1px solid $black;
+//            text-decoration: none;
+//            border-bottom: 1px solid $black;
             &:hover { 
                 text-decoration: none;
             }
@@ -37,7 +79,16 @@
         margin-bottom: 50px;
     }
     .left-border {
-        border-left: 1px solid $black;
+        border-left: 1.25px solid $black;
+        @include media-breakpoint-up(sm) {
+            padding-left: 30px;
+        }
+    }
+}
+
+.category-featured {
+    .single-archive-post-wrap {
+        margin-bottom: 0;
     }
 }
 
@@ -50,8 +101,14 @@
     }
 }
 
+.home-people {
+    margin-top: 125px;
+    @include media-breakpoint-down(sm) {
+        margin-top: 25px;
+    }
+}
+
 .home-editors-picks {
-    margin: 125px 0;
     h2 {
         @include post-body-subheading;
         margin-bottom: 15px;
@@ -65,10 +122,16 @@
     display: flex;
     justify-content: space-between;
     border-top: 2px dotted $black;
-    border-bottom: 2px dotted $black;
+//    border-bottom: 2px dotted $black;
     .pick {
         position: relative;
         width: 22%;
+        @include media-breakpoint-up(md) {
+            border-left: 1px solid #E8E8E8;
+            padding-left: 23px;
+            margin-top: 20px;
+        }
+
         a {
             text-decoration: none;
             display: block;
@@ -105,15 +168,29 @@
 
 .featured-cat-heading {
     @include archive-term-font;
+//    display: inline-block;
+//    background-image: none;
+//    background-repeat: no-repeat;
+//    background-position: 0 70px;
+//    background-size: 100% 30px;
+//    padding-bottom: 30px;
+//    position: relative;
+//    left: 0;
+    margin-bottom: 55px;
     display: inline-block;
-    background-image: none;
-    background-repeat: no-repeat;
-    background-position: 0 70px;
-    background-size: 100% 30px;
-    padding-bottom: 30px;
-    margin-bottom: 75px;
     position: relative;
-    left: 0;
+    &::before {
+        height: 30px;
+        width: 100%;
+        content: "";
+        background-color: rgba(196, 196, 196, 0.7);
+        position: absolute;
+        bottom: -7px;
+        @include media-breakpoint-down(sm) {
+            height: 16px;
+            bottom: 6px;
+        }
+    }
     @include media-breakpoint-down(sm) { 
         font-size: 51px;
         line-height: 49px;
@@ -132,8 +209,12 @@
         position: absolute;
         right: -39px;
         top: -23px;
+        transition: 0.2s all;
         img.see-all-circle {
             width: 75px;
+        }
+        &:hover {
+            transform: rotate(20deg);
         }
     }
     span.stars {
@@ -155,13 +236,19 @@
         }
     }
     &.green {
-        background-image: linear-gradient(180deg, $green, $green);
+        &::before {
+            background-color: rgba(0, 218, 43, 0.7);
+        }
     }
     &.blue {
-        background-image: linear-gradient(180deg, $blue, $blue);
+        &::before {
+            background-color: rgba(4, 210, 255, 0.7);
+        }
     }
     &.orange {
-        background-image: linear-gradient(180deg, $orange, $orange);
+        &::before {
+            background-color: rgba(255, 137, 29, 0.7);
+        }
     }
 }
 @include media-breakpoint-down(sm) {
@@ -178,6 +265,12 @@
 @media (min-width: 1400px) {
     .featured-cat-heading {
         left: -100px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .featured-cat-heading {
+        left: -30px;
     }
 }
 
