--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_mixins.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_mixins.scss
@@ -1,5 +1,34 @@
 //Header
 
+@mixin drawUnderline {
+      display: inline-block;
+      position: relative;
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      transform: scaleX(0);
+      height: 1.25px;
+      bottom: 0;
+      left: 0;
+      background-color: $black;
+      transform-origin: bottom right;
+      transition: transform 0.25s ease-out;
+    }
+
+    &:hover {
+        &::after {
+          transform: scaleX(1);
+          transform-origin: bottom left;
+        }
+    }
+}
+
+.drawUnderline {
+    @include drawUnderline;
+}
+
+
 @mixin box-color-hovers {
     transition: 0.2s all;
     &:hover {
@@ -8,32 +37,34 @@
     &.green {
         &:hover, &:focus {
             &::before {
-            display: block;
-            content: '';
-            position: absolute;
-            top: -8px;
-            right: -8px;
-            bottom: -8px;
-            left: -8px;
-            border: 16px solid rgba(0,218,43,.67);
-            mix-blend-mode: multiply;
-            z-index: 9;
+                display: block;
+                content: '';
+                position: absolute;
+                top: -8px;
+                right: -8px;
+                bottom: -8px;
+                left: -8px;
+                border: 16px solid rgba(0,218,43,.67);
+                mix-blend-mode: normal;
+                z-index: 9;
+                border-radius: 4px;
             }
         }
     }
     &.blue {
         &:hover, &:focus {
             &::before {
-            display: block;
-            content: '';
-            position: absolute;
-            top: -8px;
-            right: -8px;
-            bottom: -8px;
-            left: -8px;
-            border: 16px solid rgba(91,210,255,.67);
-            mix-blend-mode: multiply;
-            z-index: 9;
+                display: block;
+                content: '';
+                position: absolute;
+                top: -8px;
+                right: -8px;
+                bottom: -8px;
+                left: -8px;
+                border: 16px solid rgba(91,210,255,.67);
+                mix-blend-mode: normal;
+                z-index: 9;
+                border-radius: 4px;
             }
         }
     }
@@ -48,8 +79,9 @@
             bottom: -8px;
             left: -8px;
             border: 16px solid rgba(255, 137, 29, .67);
-            mix-blend-mode: multiply;
+            mix-blend-mode: normal;
             z-index: 9;
+            border-radius: 4px;
             }
         }
     }
@@ -59,7 +91,7 @@
 @mixin nav-items {
     font-size: 16px;
     line-height: 20px;
-    font-family: 'Suisse Bold', sans-serif;
+    font-family: 'Suisse Black', sans-serif;
     @include media-breakpoint-down(md) {
         font-size: 15px;
         line-height: 19px;
@@ -74,7 +106,7 @@
     font-family: 'Suisse Reg', sans-serif;
     text-transform: uppercase;
     padding-bottom: 1px;
-    border-bottom: 1px solid $black;
+//    border-bottom: 1px solid $black;
     &:hover {
         text-decoration: none;
     }
@@ -190,26 +222,25 @@
     font-size: 112px;
     line-height: 100px;
     letter-spacing: -4px;
-    font-family: "Suisse Bold",sans-serif;
+    font-family: "Suisse Black",sans-serif;
     text-transform: lowercase;
     @include media-breakpoint-down(md) {
         font-size: 80px;
         line-height: 90px;
     } 
     @include media-breakpoint-down(sm) {
+        display: inline;
         font-size: 60px;
         line-height: 60px;
-        background-position: 0 53px;
-        background-size: 100% 16px;
-        padding-bottom: 30px;
         letter-spacing: -2px;
+        padding-bottom: 20px;
     } 
 }
 
 @mixin mobile-drawer-term-font {
     font-size: 32px;
     line-height: 20px;
-    font-family: 'Suisse Bold', sans-serif;
+    font-family: 'Suisse Black', sans-serif;
     text-transform: lowercase;
 }
 
