--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_drawer.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_drawer.scss
@@ -13,6 +13,9 @@
 
 #drawerClose {
     margin: 0 0 !important; 
+    background: 0 0;
+    border: none;
+    box-shadow: none;
 }
 
 input.search-submit{
