--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_header.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_header.scss
@@ -137,13 +137,16 @@
     }    
 }
 
-.hamburgerMenu {
+.hamburgerMenu { 
     margin-left: 20px;
+    background: 0 0;
+    border: none;
+    box-shadow: none;
 }
 
 
 
-@include media-breakpoint-down(md) {
+@include media-breakpoint-down(sm) {
   .hamburgerMenu {
     display: none;
   }
