--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_home.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_home.scss
@@ -93,10 +93,10 @@ a.home-logo-rel-wrapper {
 }
 
 .featured-post-headings {
-    h2.entry-title {
+    h2.entry-title, h3.entry-title {
         @include home-archive-title-font;
     }
-    h3.subheading {
+    .subheading {
         @include home-archive-subhading-font;
     }
 }
