--- a/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_post-headings.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/post-styles/_post-headings.scss
@@ -9,7 +9,7 @@
         @include large-title;
         margin-bottom: $space;
     }
-    h2.single-post-subheading {
+    .single-post-subheading {
         @include single-subheading;
         margin-bottom: $space;
     }
