--- a/wp-content/themes/rysersonmag-child/css/child-theme.css
+++ b/wp-content/themes/rysersonmag-child/css/child-theme.css
@@ -15109,18 +15109,22 @@ body strong {
 .drawUnderline {
   display: inline-block;
   position: relative;
+  border-bottom: 1px solid #000;
 }
 .drawUnderline::after {
   content: "";
   position: absolute;
   width: 100%;
   transform: scaleX(0);
-  height: 1.25px;
-  bottom: 0;
+  height: 1px;
+  bottom: -1px;
   left: 0;
   background-color: #000;
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
+}
+.drawUnderline:hover {
+  border-bottom: none;
 }
 .drawUnderline:hover::after {
   transform: scaleX(1);
@@ -15415,6 +15419,7 @@ input[type=search]:-webkit-autofill::first-line {
   font-family: "Lynon Reg", sans-serif;
   color: #fff;
   white-space: nowrap;
+  border-bottom: none !important;
 }
 @media (max-width: 991.98px) {
   .drawer-tags-row a {
@@ -15461,8 +15466,21 @@ input[type=search]:-webkit-autofill::first-line {
   margin-left: 18px;
   margin-right: 0;
 }
+.drawer-footer-inner ul.drawer-footer-social li a i {
+  color: #4c4c4c;
+  width: 24px;
+  height: 24px;
+  border-radius: 100%;
+  display: block;
+  background: #fff;
+  text-align: center;
+  line-height: 24px;
+}
 .drawer-footer-inner ul.drawer-footer-social li a img {
   width: 24px;
+}
+.drawer-footer-inner ul.drawer-footer-social li a:hover i {
+  background: #D9D9D9;
 }
 
 .mobile-header-pad {
@@ -15575,6 +15593,9 @@ input[type=search]:-webkit-autofill::first-line {
   margin-right: 0;
   margin-bottom: 0;
 }
+.mobile-header-drawer ul.drawer-footer-social li:first-of-type {
+  margin-left: 0;
+}
 .mobile-header-drawer ul.drawer-footer-social li a img {
   width: 36px;
 }
@@ -15635,7 +15656,6 @@ input[type=search]:-webkit-autofill::first-line {
   display: flex;
   justify-content: space-between;
   margin-top: 20px;
-  padding: 0 15px;
 }
 
 .half {
@@ -15662,7 +15682,6 @@ ul.mobile-drawer-links li a {
   font-size: 16px;
   color: #000;
   font-family: "Suisse Reg", sans-serif;
-  padding-left: 15px;
 }
 
 .post-header-info-wrap {
@@ -15730,6 +15749,12 @@ ul.mobile-drawer-links li a {
 }
 .vertical-black .post-header-info-wrap .primary-category {
   border-bottom: 1px solid #fff;
+}
+.vertical-black .post-header-info-wrap .primary-category::after {
+  background-color: #fff;
+}
+.vertical-black .post-header-info-wrap .primary-category:hover {
+  border-bottom: none;
 }
 @media (max-width: 767.98px) {
   .vertical-black .author-meta {
@@ -15817,7 +15842,7 @@ figcaption {
   border-radius: 100% !important;
 }
 
-.related-articles-sec h3 {
+.related-articles-sec h2 {
   font-family: "Suisse Bold", sans-serif;
   font-size: 20px;
   line-height: 20px;
@@ -15902,6 +15927,16 @@ figcaption {
 .related-articles-sec .single-related-article a p.primary-category {
   border-bottom: none;
 }
+.related-articles-sec .single-related-article a .editors-pick-title {
+  font-family: "Lynon Reg", sans-serif;
+  font-size: 1.5rem;
+}
+
+.editors-picks-list {
+  padding: 0;
+  list-style-type: none;
+}
+
 @media (max-width: 767.98px) {
   .social-share-icons {
     margin-bottom: 15px;
@@ -16065,13 +16100,13 @@ blockquote {
 .watn-wrap .watn-arrow, .watn-wrap .watn-sep {
   display: flex;
   justify-content: center;
-  margin: 18px 0 0 0;
+  margin: 18px 0;
 }
 .watn-wrap .watn-sep {
   margin: 18px 0;
 }
 .watn-wrap .watn-img {
-  margin: 18px auto;
+  margin: 0 auto 18px;
   display: block;
   width: 95px;
   height: 95px;
@@ -16217,10 +16252,18 @@ blockquote {
 .author-social-item.author-twitter {
   margin-right: 8px;
 }
-.author-social-item img {
+.author-social-item i {
   float: left;
   display: block;
   margin-right: 5px;
+  color: #000;
+  width: 24px;
+  height: 24px;
+  border-radius: 100%;
+  display: block;
+  background: #e8e8e8;
+  text-align: center;
+  line-height: 24px;
 }
 .author-social-item span {
   display: block;
@@ -16597,18 +16640,22 @@ a.home-logo-rel-wrapper p {
 a.home-logo-rel-wrapper span {
   display: inline-block;
   position: relative;
+  border-bottom: 1px solid #000;
 }
 a.home-logo-rel-wrapper span::after {
   content: "";
   position: absolute;
   width: 100%;
   transform: scaleX(0);
-  height: 1.25px;
-  bottom: 0;
+  height: 1px;
+  bottom: -1px;
   left: 0;
   background-color: #000;
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
+}
+a.home-logo-rel-wrapper:hover span {
+  border-bottom: none;
 }
 a.home-logo-rel-wrapper:hover span::after {
   transform: scaleX(1);
@@ -16709,6 +16756,8 @@ a.home-logo-rel-wrapper:hover span::after {
   display: flex;
   justify-content: space-between;
   border-top: 2px dotted #000;
+  padding: 15px 0 0 0;
+  list-style-type: none;
 }
 .editors-picks-flex .pick {
   position: relative;
@@ -16770,7 +16819,7 @@ a.home-logo-rel-wrapper:hover span::after {
 .editors-picks-flex .pick a p.primary-category {
   border-bottom: none;
 }
-.editors-picks-flex .pick a h3 {
+.editors-picks-flex .pick a .editors-pick-title {
   font-size: 26px;
   line-height: 32px;
   font-family: "Lynon Bold", sans-serif;
@@ -17249,8 +17298,21 @@ h2.contact-masthead-title {
   margin-right: 0;
   margin-bottom: 0;
 }
+.footer-bottom-inner ul.drawer-footer-social li a i {
+  color: #000;
+  width: 24px;
+  height: 24px;
+  border-radius: 100%;
+  display: block;
+  background: #fff;
+  text-align: center;
+  line-height: 24px;
+}
 .footer-bottom-inner ul.drawer-footer-social li a img {
   width: 24px;
+}
+.footer-bottom-inner ul.drawer-footer-social li a:hover i {
+  background: #D9D9D9;
 }
 
 .main-footer-mob {
