--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_drawer-mobile.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_drawer-mobile.scss
@@ -106,6 +106,9 @@
             margin-left: 20px;
             margin-right: 0;
             margin-bottom: 0;
+            &:first-of-type {
+                margin-left: 0;
+            }
             a {
                 img {
                     width: 36px;
@@ -180,7 +183,6 @@
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
-    padding: 0 15px;
 }
 .half {
     width: 50%;
@@ -204,5 +206,4 @@ ul.mobile-drawer-links {
     font-size: 16px;
     color: $black;
     font-family: 'Suisse Reg', sans-serif;
-    padding-left: 15px;
 }
