--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_drawer.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_drawer.scss
@@ -127,6 +127,7 @@ input[type="search"]:-webkit-autofill::first-line {
         font-family: 'Lynon Reg', sans-serif;
         color: $white;
         white-space: nowrap;
+        border-bottom: none !important;
         @include media-breakpoint-down(md) {
             font-size: 26px;
             line-height: 48px;
@@ -173,8 +174,23 @@ input[type="search"]:-webkit-autofill::first-line {
             margin-left: $space;
             margin-right: 0;
             a {
+                i {
+                    color: $medGrey;
+                    width: 24px;
+                    height: 24px;
+                    border-radius: 100%;
+                    display: block;
+                    background: $white;
+                    text-align: center;
+                    line-height: 24px;
+                }
                 img {
                     width: 24px;
+                }
+                &:hover {
+                    i {
+                        background: #D9D9D9;
+                    }
                 }
             }
         }
