--- a/wp-content/themes/rysersonmag-child/src/sass/theme/_footer.scss
+++ b/wp-content/themes/rysersonmag-child/src/sass/theme/_footer.scss
@@ -80,8 +80,23 @@
             margin-right: 0;
             margin-bottom: 0;
             a {
+                i {
+                    color: $black;
+                    width: 24px;
+                    height: 24px;
+                    border-radius: 100%;
+                    display: block;
+                    background: $white;
+                    text-align: center;
+                    line-height: 24px;
+                }
                 img {
                     width: 24px;
+                }
+                &:hover {
+                    i {
+                        background: #D9D9D9;
+                    }
                 }
             }
         }
